--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,5 @@
 language: csharp
-solution: travisTest.sln
+dotnet:
+  - 8.0
+  - 7.0
 mono: none
-dotnet: 8.0
-
-# Travis CI'ın çalıştıracağı işletim sistemleri
-os:
-  - linux
-
-# Çalıştırılacak komutlar
-script:
-  - dotnet restore
-  - dotnet build --configuration Release
-  - dotnet test
-
-# Hangi branchlerde çalışacağı
-branches:
-  only:
-    - main
-    - develop
-
-# Önbelleğe alınacak dizinler
-cache:
-  directories:
-    - $HOME/.nuget/packages
